# hypermodern-python-project

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  main.yml  workflow.yml
docker/: noxfile-black.py
docs/: conf.py  index.rst
src/hypermodern_python_project/: __main__.py  console.py
tests/: test_console.py  test_init.py  test_main.py
