[tool.poetry]
name = "hypermodern-python-project"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cjolowicz/hypermodern-python-project"
repository = "https://github.com/cjolowicz/hypermodern-python-project"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
hypermodern-python-project = "hypermodern_python_project.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
